# genesis-test

./: compose.yml
backend/: Dockerfile  README.md  db.sqlite3  pyproject.toml
backend/config/: settings.py  urls.py
backend/core/: models.py  serializers.py  tests.py  views.py
backend/core/management/commands/: import_genes.py
backend/core/migrations/: 0001_initial.py
frontend/: angular.json  package-lock.json  package.json
frontend/src/app/: app.config.ts  app.html  app.scss  app.ts
frontend/src/app/services/: gene.spec.ts  gene.ts
